--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <form>
-        <label for="lastname">Votre nom  : </label><input type="text" onkeypress="pushMe()" name="lastname" id="lastname" value="Hello World !" />
+        <label for="lastname">Votre nom  : </label><input type="text" onkeyup="pushMe()" name="lastname" id="lastname" />
     </form>
     <script src="assets/script.js"></script>
 </body>
